--- a/responz/style.css
+++ b/responz/style.css
@@ -133,10 +133,8 @@ table {
 *{
     box-sizing: border-box;
 }
-body{
-    padding: 0;
-}
-.header-form{
+
+/*.header-form{
 
     background-color: rgb(2, 34, 34);
 
@@ -150,24 +148,85 @@ header a {
     background-color: rgb(0, 255, 34);
 }
 .post{
-    background-color: blueviolet;
-}
+    background-color: rgb(127, 113, 141);
+}*/
 body{
     font-family: Merriweather;
-    font-size: 18px;
-    line-height: 32px;
+    font-size: 1.125rem;
+    line-height: 2rem;
     color:#333;
 }
 h1,
 h2 {
     font-family:poppins;
-    font-size: 28.8px;
+    font-size: 1.8rem;
 }
 h2{
-    font-size: 25.6px;
+    font-size: 1.6rem;
     color:#a7dfb5
 }
 header p{
-    font-size: 18px;
-    letter-spacing: 2px;
+    font-size: 1.125rem;
+    letter-spacing: 0.125rem;
 }
+.image-01{
+    width: 100%;
+}
+/* ==== LAYOUT STYLES ==== */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+hgroup,
+ul,
+ol,
+dd,
+p,
+figure,
+pre,
+table,
+fieldset,
+hr,.header-form,.main-content {
+    margin-bottom: 1rem;
+}
+.header-form{
+    text-align: center;
+    padding: 1.25rem;
+}
+.post{
+    width:95%;
+    margin: 1.25rem auto;
+    padding: 0.3125rem;
+}
+.image-01{
+    width: 100%;
+}
+.button{
+    display: inline-block;
+    border: solid 1px;
+    border-radius: 10px;
+    padding-right: 5px;
+    padding-left: 5px;
+    margin: 5px;
+    width: 100px;
+    text-decoration: none;
+
+}
+.button:hover{
+    border: 1px solid #b60e63;
+
+}
+a.load{
+    
+    display: block;
+    text-align: center;
+    text-decoration: none;
+    font-size: 1.5rem;
+    font-style: oblique;
+    padding: 0.625rem;
+}
+a.load:hover{
+    color: #b60e63;
+}   
