--- a/responz/style.css
+++ b/responz/style.css
@@ -188,12 +188,14 @@ figure,
 pre,
 table,
 fieldset,
-hr,.header-form,.main-content {
+hr,.header-form,.main-content {/*vertikális egyenlőség kódja*/
     margin-bottom: 1rem;
 }
 .header-form{
     text-align: center;
     padding: 1.25rem;
+    background-color: #333;
+    color:aqua
 }
 .post{
     width:95%;
@@ -212,6 +214,7 @@ hr,.header-form,.main-content {
     margin: 5px;
     width: 100px;
     text-decoration: none;
+    color:cadetblue
 
 }
 .button:hover{
@@ -229,4 +232,40 @@ a.load{
 }
 a.load:hover{
     color: #b60e63;
-}   
+} 
+/* header-form Wrapper Styles */
+@media (min-width: 768px) {
+    .header-form {
+            position: fixed;
+            top: 0;
+            height: 100%;
+            width: 33.3%;
+        }
+}
+@media (min-width: 1025px) {
+
+    .header-form {
+        width: 20.625%;
+    }
+
+}
+/* main-content Wrapper Styles */
+
+@media (min-width: 768px) {
+
+    .main-content {
+        float: right;
+        width: 66.6%;
+        max-width: 812px;
+    }
+
+}
+@media (min-width: 1025px) {
+
+    .main-content {
+        float: none;
+        position: absolute;
+        left: 20.625%;
+    }
+
+}
